Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.2, 6.6, 6.7.0 Beta2, 6.7, 6.8.0 FF
-
6.6.1
-
None
-
-
82a32ac7ab78d449531f3d5681c1dc943e681d00, bc578ec6e (dev), d7bc61ac5 (6.7), a599c69dc (6.6)
Description
Qt does not handle PointerEvents with type "pen" sent from the browser properly. It ends up treating them as touch events, which is nonsensical and just leads to warnings being output on the browser console about there not being a target window, but no inputs of any sort happening.
The expected behavior is that tablet events are emitted and, if those aren't accepted, mouse events are synthesized by Qt.
The attached patch implements this on top of Qt 6.6.1.
Attachments
Issue Links
- duplicates
-
QTBUG-116989 wasm: pen pointerhandler example does not work as expected
-
- Closed
-