src/plugins/platforms/wasm/qwasmevent.h
@@ -221,6 +221,10 @@ struct PointerEvent : public MouseEvent
     PointerType pointerType;
     int pointerId;
     qreal pressure;
+    qreal tiltX;
+    qreal tiltY;
+    qreal tangentialPressure;
+    qreal twist;
     qreal width;
     qreal height;
     bool isPrimary;
